RESOLVED FIXED27146
JSDebugger crashes after reloading from a breakpoint
https://bugs.webkit.org/show_bug.cgi?id=27146
Summary JSDebugger crashes after reloading from a breakpoint
Oliver Hunt
Reported 2009-07-10 01:59:38 PDT
In certain scenarios it is possible to end up with a dead callframe in the inspector, this leads to a crash in the debugger.
Attachments
harden the debugger (3.38 KB, patch)
2009-07-10 02:08 PDT, Oliver Hunt
timothy: review+
commit-queue: commit-queue-
Oliver Hunt
Comment 1 2009-07-10 02:08:03 PDT
Created attachment 32552 [details] harden the debugger
Oliver Hunt
Comment 2 2009-07-10 02:36:26 PDT
Comment on attachment 32552 [details] harden the debugger despite fixing the crash weirdness happens in the debugger afterwards
WebKit Commit Bot
Comment 3 2009-09-11 21:56:41 PDT
Comment on attachment 32552 [details] harden the debugger Rejecting patch 32552 from commit-queue. This patch will require manual commit. Patch https://bugs.webkit.org/attachment.cgi?id=32552 from bug 27146 failed to download and apply.
Eric Seidel (no email)
Comment 4 2009-09-14 09:51:44 PDT
patching file WebCore/inspector/InspectorController.cpp Hunk #1 FAILED at 535. 1 out of 1 hunk FAILED -- saving rejects to file WebCore/inspector/InspectorController.cpp.rej
Eric Seidel (no email)
Comment 5 2009-09-18 12:01:19 PDT
A quick git log search looks like this hasn't been landed yet.
Eric Seidel (no email)
Comment 6 2009-10-05 10:52:49 PDT
Ping?
Eric Seidel (no email)
Comment 7 2009-10-19 15:13:27 PDT
This patch has been chillin-like-a-villin in the to-be-committed list for over a month now. Is the patch still wanted?
Timothy Hatcher
Comment 8 2009-10-19 20:00:05 PDT
This was actually fixed by: http://trac.webkit.org/changeset/45733 I don't think this full patch is needed, but I landed the parts that are still relevant. Landed the relevant parts in r49832.
Note You need to log in before you can comment on or make changes to this bug.