Small changes to fully invalidate and update the JavaScriptCallFrame.

Patch by Oliver Hunt <oliver@apple.com> on 2009-10-19
<rdar://problem/7020755> JSDebugger crashes after reloading from a breakpoint
https://bugs.webkit.org/show_bug.cgi?id=27146

Reviewed by Timothy Hatcher.

* inspector/JavaScriptCallFrame.h:
(WebCore::JavaScriptCallFrame::invalidate):
(WebCore::JavaScriptCallFrame::update):

git-svn-id: svn://svn.chromium.org/blink/trunk@49832 bbb929c8-8fbe-4397-9dbb-9b2b20218538