third_party/WebKit/WebCore/inspector/JavaScriptCallFrame.h
@@ -45,7 +45,12 @@ namespace WebCore {
             return adoptRef(new JavaScriptCallFrame(debuggerCallFrame, caller, sourceID, line));
         }
 
-        void invalidate() { m_isValid = false; }
+        void invalidate()
+        {
+            m_isValid = false;
+            m_debuggerCallFrame = 0;
+        }
+
         bool isValid() const { return m_isValid; }
 
         JavaScriptCallFrame* caller();
@@ -57,6 +62,7 @@ namespace WebCore {
             m_debuggerCallFrame = debuggerCallFrame;
             m_line = line;
             m_sourceID = sourceID;
+            m_isValid = true;
         }
 
         String functionName() const;
